<resources>
    <string name="app_name">RentOn</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="phone_not_valid">Phone Number is not valid</string>
    <string name="first_name_cannot_empty">Firstname cannot be empty</string>
    <string name="phone_cannot_empty">Phone Number cannot be empty</string>
    <string name="email_cannot_empty">Email cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="password_minimum_character">Password minimum length is 8 character</string>
    <string name="confirm_password_cannot_empty">Confirm Password cannot be empty</string>
    <string name="confirm_password_not_match">Password and Confirm Password is not match</string>
    <string name="basic_information">Basic Information</string>
    <string name="input_firstname">Firstname *</string>
    <string name="input_lastname">Lastname *</string>
    <string name="input_phone">Phone Number *</string>
    <string name="input_email">Email *</string>
    <string name="input_password">Password *</string>
    <string name="input_confirm_password">Confirm Password *</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="check_form_again">Check again form input</string>
    <string name="exit_form_registration">Exit from Registration</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="personal_information">Personal Information</string>
    <string name="company">Company</string>
    <string name="personal">Personal</string>
    <string name="input_company_name">Company Name *</string>
    <string name="input_regency">Regency *</string>
    <string name="input_address">Address *</string>
    <string name="input_description">Description</string>
    <string name="take_user_photo">Click image bellow to set Profile Photo</string>
    <string name="checking_email">Checking Email...</string>
    <string name="failed_check_to_server">Failed check to server!</string>
    <string name="checking_phone">Checking Phone Number...</string>
    <string name="checking_regencies">Checking Regencies...</string>
    <string name="regency_cannot_empty">Regency cannot be empty</string>
    <string name="data_not_found">Data not found</string>
    <string name="address_cannot_empty">Address cannot be empty</string>
    <string name="company_name_cannot_empty">Company name cannot be empty</string>
    <string name="regency_must_select">Pick one regency from menu</string>
    <string name="document_and_finance">Document and finance</string>
    <string name="take_identity_image">Click image bellow to set Identity Image</string>
    <string name="take_bussiness_licence">Click image bellow to set Bussiness Licence Image</string>
    <string name="take_company_registration">Click image bellow to set Bussiness Registration Image</string>
    <string name="input_tax_number">Tax Number</string>
    <string name="input_pick_bussiness_location">Pick Bussiness Location *</string>
    <string name="title_activity_location_pick">Pick Location</string>
    <string name="set_location">Set Location</string>
    <string name="input_referal">Referal</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="login_cannot_empty">Email and Password cannot be empty!</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_rent_vechicle">Rent Vehicle</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure to logout?</string>
    <string name="take_driver_licence">Click Image bellow to set Driver Licence Image</string>
    <string name="permission_not_granted">All of need permission not allowed App need it to access detail information. Do you want open permission setting and enable all permission?</string>
    <string name="menu_account">Account</string>
    <string name="referal_code">Referal Code</string>
    <string name="title_activity_rent_vehicle_select_regency">Select City</string>
    <string name="referal_code_message">Referal Code copied to clipboard</string>
    <string name="change_password">Change Password</string>
    <string name="change_bank">Change Bank Number</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_rent_vehicle">Rent Vehicle</string>
    <string name="partner">Partner</string>
    <string name="menu_become_partner">Become Partner!</string>
    <string name="menu_wash_vehicle">Wash Vehicle</string>
    <string name="ownership_information">Ownership Information</string>
    <string name="title_activity_register_customer">Register Customer</string>
    <string name="title_activity_register_partner">Register Partner</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="input_title">Title *</string>
    <string name="input_vehicle_type">Vehicle Type</string>
    <string name="input_brand">Brand</string>
    <string name="input_year">Year *</string>
    <string name="input_color">Color</string>
    <string name="input_max_passenger">Max Passenger *</string>
    <string name="input_transmition">Transmition</string>
    <string name="input_fuel">Fuel</string>
    <string name="input_price">Price (per day) *</string>
    <string name="title_cannot_empty">Title cannot be empty</string>
    <string name="max_passenger_cannot_empty">Max passenger cannot be empty</string>
    <string name="add_photo">Add Photo</string>
    <string name="filter">Filter</string>
    <string name="price_range">Price Range</string>
    <string name="photo">Photo</string>
    <string name="delete_confirm">Are you sure want to delete this item ?\neverything that has been done cannot be restored.</string>
    <string name="year_cannot_empty">Year cannot be empty</string>
    <string name="price_cannot_empty">Price cannot be empty</string>
    <string name="with_driver">Must with Driver</string>
    <string name="input_driver">Driven</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="failed_delete_photo">Failed to delete photo</string>
    <string name="post_vehicle">Post Vehicles</string>
    <string name="exit">Exit</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="success_delete_vehicle">Success delete vehicle</string>
    <string name="no_data_available">No data available</string>
    <string name="active">Active</string>
    <string name="menu_partner_profile">Profile</string>
    <string name="menu_logour">Logout</string>
    <string name="all_item">All Item</string>
    <string name="inactive">Inactive</string>
    <string name="action_add">Add New</string>
    <string name="none">None</string>
    <string name="two_people">2 People</string>
    <string name="four_people">4 People</string>
    <string name="six_people">6 People</string>
    <string name="more_than_six_people"> > 6 People</string>
    <string name="title_filters">Filters</string>
    <string name="max_passenger">Max Passenger</string>
    <string name="apply">Apply</string>
    <string name="action_reset">Reset</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="alfabetic_asc">Alfabetic Asceding</string>
    <string name="alfabetic_desc">Alfabetic Desceding</string>
    <string name="price_high">Price High</string>
    <string name="price_low">Price Low</string>
    <string name="title_sort">Sort</string>
    <string name="last_update">Last Update</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="brand">Brand</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="transmition">Transmition</string>
    <string name="driven">Driven</string>
    <string name="fuel">Fuel</string>
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="confirm_delete_vehicle">Are you sure to delete this vehicle?</string>
    <string name="title_select_date">Select Date</string>
    <string name="pick_up_time">Pick Up Time</string>
    <string name="date">Date</string>
    <string name="date_not_selected">No date selected. Pelase select one!</string>
    <string name="time_not_selected">No time pickup selected. Please select one!</string>
    <string name="title_rent_vehicle_list">List Vehicle</string>
    <string name="rent_info">%1$s - %2$s , %3$s Days</string>
    <string name="relevance">Relevance</string>
    <string name="closest">Closest</string>
    <string name="vehicle_detail_info">Make sure item available before booking. You can chat owner to get information.</string>
    <string name="chat">Chat</string>
    <string name="order">Order</string>
    <string name="total_payment">Total Payment</string>
    <string name="per_day">/ Day</string>
    <string name="days">Days</string>
    <string name="delivered">Delivered</string>
    <string name="input_price_with_driver_basic">Price with Driver Basic (per day) *</string>
    <string name="input_price_with_driver_full">Price with Driver Full (per day) *</string>
    <string name="car_only">Hanya Kendaaran</string>
    <string name="car_plus_driver_basic">Rent car With Driver</string>
    <string name="car_plus_driver_all_in">Car + Driver All In</string>
    <string name="select_type">Select Type</string>
    <string name="select_package">Select Package</string>
    <string name="title_rent_vehicle_checkout">Checkout</string>
    <string name="input_model">Model</string>
    <string name="input_max_baggage">Max Baggage</string>
    <string name="delivery_warning">Delivery fee will add by owner when accept your booking. This total payment of booking is not final</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="coupon">Coupon</string>
    <string name="input_coupon">Coupon Code</string>
    <string name="coupon_description">You can get coupon by follow News of this app. Coupon only can use one time. If you cancel this order after booking, coupon you entered cannot use again in another book.</string>
    <string name="grand_total">Grand Total</string>
    <string name="discount">Discount</string>
    <string name="max_baggage_cannot_empty">Max baggage cannot be empty</string>
    <string name="model">Model</string>
    <string name="max_baggage">Max Baggage</string>
    <string name="done">Done</string>
    <string name="member_since">Member Since</string>
    <string name="manage_bank">Manage Bank Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="title_customer_bank">List Bank</string>
    <string name="title_customer_add_bank">Add Bank</string>
    <string name="input_bank">Bank</string>
    <string name="input_bank_number">Bank Number *</string>
    <string name="input_name">Name *</string>
    <string name="post_bank">Post Bank</string>
    <string name="edit_bank">Edit Bank</string>
    <string name="add_bank">Add Bank</string>
    <string name="topup">Topup</string>
    <string name="withdraw">Withdraw</string>
    <string name="balance">Balance</string>
    <string name="point">Point</string>
    <string name="exchange">Exchange</string>
    <string name="menu_news">News</string>
    <string name="nav_about_us">About Us</string>
    <string name="partner_reward">Partner Reward</string>
    <string name="customer">Customer</string>
    <string name="menu_promote_rent_vehicle">Promote Rent Vehicle</string>
    <string name="functional_type">Tipe Fungsi</string>
</resources>